--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/FileConnect/dbProperties.properties
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/FileConnect/dbProperties.properties
@@ -1,5 +1,5 @@
 baseDatosNombre = telascompany
 usuario = root
-password = secodepollo
+password = 3434
 url = jdbc:mysql://localhost/
 driver = com.mysql.cj.jdbc.Driver
