--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/TelasCompany.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfoenix-8.0.10.jar=jfoenix-8.0.10.jar
 file.reference.mysql-connector-java-8.0.27.jar=src\\FileConnect\\mysql-connector-java-8.0.27.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,7 +38,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
