--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/TelasCompany.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.fontawesomefx-8.1.1.jar=fontawesomefx-8.1.1.jar
+file.reference.fontawesomefx-8.8.jar=fontawesomefx-8.8.jar
 file.reference.jfoenix-8.0.10.jar=jfoenix-8.0.10.jar
 file.reference.mysql-connector-java-8.0.27.jar=src\\FileConnect\\mysql-connector-java-8.0.27.jar
 includes=**
@@ -39,7 +41,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.fontawesomefx-8.8.jar}:\
+    ${file.reference.fontawesomefx-8.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
