--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/nbproject/project.properties
@@ -1,11 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=TelasCompany
-application.vendor=kevin
+application.title=BordadosSusana
+application.vendor=Flimboo
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,17 +30,24 @@ dist.jar=${dist.dir}/TelasCompany.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.fontawesomefx-8.1.1.jar=fontawesomefx-8.1.1.jar
+file.reference.fontawesomefx-8.8.jar=fontawesomefx-8.8.jar
+file.reference.jfoenix-8.0.10.jar=jfoenix-8.0.10.jar
 file.reference.mysql-connector-java-8.0.27.jar=src\\FileConnect\\mysql-connector-java-8.0.27.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.fontawesomefx-8.8.jar}:\
+    ${file.reference.fontawesomefx-8.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -67,11 +74,19 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=true
+javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
+javafx.deploy.icon=
+javafx.deploy.icon.native=bordados-logo-negro.ico
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=true
+javafx.deploy.permissionselevated=false
+javafx.deploy.splash=
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -92,6 +107,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -102,6 +120,8 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
