--- a/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/FileConnect/dbProperties.properties
+++ b/OneDrive/Documentos/NetBeansProjectsP/TelasCompany/src/FileConnect/dbProperties.properties
@@ -1,5 +1,5 @@
 baseDatosNombre = telascompany
-usuario = root
-password = secodepollo
-url = jdbc:mysql://localhost/
+usuario = remote
+password = 1234
+url = jdbc:mysql://192.168.1.8/
 driver = com.mysql.cj.jdbc.Driver
